packages/kit/test/apps/basics/src/routes/errors/endpoint.json.js
export function get() {
	throw new Error('nope');
}
